@@ -1,0 +1,11 @@
+<html> 
+<head>
+<title>Dragging plain text into a styled region</title> 
+</head> 
+<body>
+<p>This test ensures the plain text dropped into a styled text region will acquire the appropriate style</p>
+<p>To run this test, drag the text in the input element below into the bold text region.  The dropped text should be bold.</p>
+<input id="dragme" value="Drag this text" ><br />
+<b contenteditable="true" id="target">Drag the text from the above input element into this bold text</b>
+</body>
+</html>
